--- a/main.html
+++ b/main.html
@@ -56,6 +56,30 @@
         <section id="Blog">
             <h1>Block</h1>
             <h4 id="SubText">Lorem ipsum</h4>
+
+            <div class="card">
+                    <img src="..." class="card-img-top" alt="...">
+                <div class="card-body" style="width: 18rem;">
+                    <h5 class="card-title">Limited time deal</h5>
+                    <p class="card-text">Don't miss our sweet deal a get in time.</p>                
+                </div>
+            </div>
+            
+            <div class="card">
+                    <img src="..." class="card-img-top" alt="...">
+                <div class="card-body" style="width: 18rem;">
+                    <h5 class="card-title">Gallery</h5>
+                    <p class="card-text">Have a look at our gallery.</p>                
+                </div>
+            </div>
+            
+            <div class="card">
+                    <img src="..." class="card-img-top" alt="...">
+                <div class="card-body" style="width: 18rem;">
+                    <h5 class="card-title">Christmass</h5>
+                    <p class="card-text">Christmass is here with our tematic menu.</p>                
+                </div>
+            </div>
         </section>
 
         <section id="About">
