--- a/blog.html
+++ b/blog.html
@@ -75,10 +75,10 @@
                 <footer>
                         <div id="Copyright">
                             <p>© Copyright 2019 Lukáš Moravec</p>
-                            <button style="padding: 0;"><img src="/images/twitter.svg" style="height: 45%;"></button>
-                            <button style="padding: 0;"><img src="/images/facebook.svg" style="height: 100%;"></button>
-                            <button style="padding: 0;"><img src="/images/pinterest.svg" style="height: 85%;"></button>
-                            <button style="padding: 0;"><img src="/images/g+.svg" style="height: 50%;"></button>               
+                            <button style="padding: 0;"><img src="images/twitter.svg" style="height: 45%;"></button>
+                            <button style="padding: 0;"><img src="images/facebook.svg" style="height: 100%;"></button>
+                            <button style="padding: 0;"><img src="images/pinterest.svg" style="height: 85%;"></button>
+                            <button style="padding: 0;"><img src="images/g+.svg" style="height: 50%;"></button>               
                         </div>
                     </footer> 
     </body>
